samples/_failures_safe/1761334957_69f459_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9da05664.c:173: error: expected ‘;’, ‘,’ or ‘)’ at end of input
